--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                         </div>
                     </div>
                     <div class="perIcon">
-                        <img src="img/hdi2.png" class="perHdImg">
+                        <a href="./wishlist.html">
+                            <img src="img/hdi2.png" class="perHdImg">
+                        </a>
                     </div>
                     <div class="perIcon">
                         <img src="img/hdi3.png" class="perHdImg">
