--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag Jewellers</title>
+    <title>Chirag - Product</title>
 
     <!-- fontawsome  -->
     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <div class="wholeHeader" id="wholeHeader">
+    <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
         <div class="upperHeader">
             <div class="upperHdCont">
                 <div class="hambBar">
@@ -40,13 +40,13 @@
                 <div class="chiragLogo">
                     <div class="headerLogo">
                         <a href="./index.html">
-                            <img src="img/logo (1).png" id="headerImgJs" class="img-fluid">
+                            <img src="img/logo-2.png" id="headerImgJs" class="img-fluid">
                         </a>
                     </div>
                 </div>
                 <div class="headerIcon">
                     <div class="perIcon loginIconHd">
-                        <img src="img/hdi1.png" class="perHdImg" id="loginJs">
+                        <img src="img/profile.png" class="perHdImg" id="loginJs">
                         <div class="logSign">
                             <ul>
                                 <li>
@@ -64,20 +64,20 @@
                     </div>
                     <div class="perIcon">
                         <a href="./wishlist.html">
-                            <img src="img/hdi2.png" class="perHdImg">
+                            <img src="img/fav.png" class="perHdImg">
                         </a>
                     </div>
                     <div class="perIcon">
-                        <img src="img/hdi3.png" class="perHdImg">
+                        <img src="img/cart.png" class="perHdImg">
                     </div>
                     <div class="perIcon">
-                        <img src="img/hdi4.png" class="perHdImg">
+                        <img src="img/search.png" class="perHdImg">
                     </div>
                 </div>
             </div>
         </div>
         <div class="downHeader" id="downHeader">
-            <div class="doenHdCont">
+            <div class="doenHdCont notHomeDoen">
                 <ul class="navbar-nav customNavCss me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -111,143 +111,82 @@
         </div>
     </div>
 
-    <!-- banner  -->
-    <div class="wholeban">
-        <div class="bannerCar">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1">
-                    <img src="img/unselect-dimond-1.png" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="1" aria-label="Slide 2">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3">
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/hero-01.jpg" class="d-block w-100">
+    <section class="productDetails mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="prodDetUImg">
+                        <img src="img/ring/product-1.png" class="img-fluid">
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/hero-01.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/hero-01.jpg" class="d-block w-100">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container categoriesBox mt-5">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="perBoxCatg perbox1">
-                    <div class="cateImg">
-                        <img src="img/earrings.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
+                    <div class="other-product-of-prodDet pt-2">
+                        <div class="prod-det-other" id="0" onclick="ProdDetailImgChange(this.id)">
+                            <img src="img/ring/product-1.png" class="img-fluid">
+                        </div>
+                        <div class="prod-det-other" id="1" onclick="ProdDetailImgChange(this.id)">
+                            <img src="img/ring/product-2.png" class="img-fluid">
+                        </div>
+                        <div class="prod-det-other" id="2" onclick="ProdDetailImgChange(this.id)">
+                            <img src="img/ring/product-3.png" class="img-fluid">
+                        </div>
+                        <div class="prod-det-other" id="3" onclick="ProdDetailImgChange(this.id)">
+                            <img src="img/ring/product-3.png" class="img-fluid">
+                        </div>
+                        <div class="prod-det-other" id="4" onclick="ProdDetailImgChange(this.id)">
+                            <img src="img/ring/product-2.png" class="img-fluid">
+                        </div>
+                        <div class="prod-det-other" id="5" onclick="ProdDetailImgChange(this.id)">
+                            <img src="img/ring/product-3.png" class="img-fluid">
+                        </div>
                     </div>
                 </div>
-                <div class="perBoxCatg">
-                    <div class="cateImg">
-                        <img src="img/ring.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="perBoxCatg">
-                    <div class="cateImg">
-                        <img src="img/dimonds.png" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="perBoxcatg textCatBox">
-                    <h2 class="catgText text-end">Be the heart of</h2>
-                    <p class="adeilTxtcatg text-end">Brilliance</p>
-                    <p class="normalCatTxt text-end">At Chirag Jewellers, we don’t just craft exquisite jewellery; we
-                        make memories for a lifetime. Timeless and extravagant – each masterpiece is crafted to reflect
-                        legacy. Embrace the uniqueness of tradition and the evolving trends of modernity as you uphold
-                        our exclusive range and astound the world.</p>
-                </div>
-                <div class="perBoxcatg">
-                    <div class="cateImg">
-                        <img src="img/Bracelet.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="perBoxcatg">
-                    <div class="cateImg">
-                        <img src="img/nacklace.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
-                    </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
+                    <p class="prodDetLargetxt txtFadedAll mb-0 mt-5">
+                        Diamond ring (R-445)
+                    </p>
+                    <div class="smlTxtprodDet txtFadedAll mb-3">Rs. 204,000.00</div>
+                    <p class="txtFadedAll pt-2">The price mentioned is exclusive of 3% goods and services tax. <br>
+                        Description : Diamond Colour – EF | Diamond Clarity – VVS
+                    </p>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="iframeCont">
-        <iframe
-            src="https://www.youtube.com/embed/ENQmpVZswys?autoplay=0&controls=0&disablekb=1&playsinline=1&cc_load_policy=0&widget_referrer=https%3A%2F%2Fwww.chiragjewellers.com%2Fonlinestore%2F&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1&customControls=true&noCookie=false&enablejsapi=1&origin=https%3A%2F%2Fwww.chiragjewellers.com&widgetid=1"
-            frameborder="0" width="100%" height="360"></iframe>
-    </div>
-
-
-    <!-- productSlider -->
     <section class="producySlider mt-5 mb-5">
         <div class="sliderHead text-center mb-5 mt-5">
             <h2 class="allHeading">
                 <span class="sliderAlFnt">Trending</span>
-                Collection
+                Ring
             </h2>
         </div>
         <div class="container">
             <div class="sliderContent">
                 <div class="owl-carousel owl-theme s-content">
                     <div class="item">
-                        <a href="./product.html">
+                        <a href="#">
                             <div class="prodImg">
-                                <img src="img/ARPEGGIA.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
+                                <img src="img/ring/product-1.png" alt="">
                             </div>
                         </a>
                     </div>
                     <div class="item">
-                        <a href="./product.html">
+                        <a href="#">
                             <div class="prodImg">
-                                <img src="img/ARPEGGIA2.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
+                                <img src="img/ring/product-2.png" alt="">
                             </div>
                         </a>
                     </div>
                     <div class="item">
-                        <a href="./product.html">
+                        <a href="#">
                             <div class="prodImg">
-                                <img src="img/ARPEGGIA3.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
+                                <img src="img/ring/product-3.png" alt="">
                             </div>
                         </a>
                     </div>
                     <div class="item">
-                        <a href="./product.html">
+                        <a href="#">
                             <div class="prodImg">
-                                <img src="img/ARPEGGIA4.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
+                                <img src="img/ring/product-4.png" alt="">
                             </div>
                         </a>
                     </div>
@@ -362,6 +301,20 @@
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
+        window.addEventListener('scroll', () => {
+            let wholeHeader = document.querySelector('.wholeHeader');
+            let headerImgJs = document.getElementById('headerImgJs');
+            let scrollTop = document.getElementById('scrollTop');
+            let position = window.scrollY > 0;
+            wholeHeader.classList.toggle('custHeadClass', position);
+            position ? headerImgJs.src = 'img/logo.png' : headerImgJs.src = 'img/logo-2.png';
+
+            let scroll = document.documentElement.scrollTop;
+            scrollTop.classList.toggle('active', scroll >= 200);
+        });
+    </script>
+
+    <script>
         var owl = $('.owl-carousel');
         owl.owlCarousel({
             loop: true,
@@ -388,33 +341,7 @@
             owl.trigger('prev.owl.carousel', [300]);
         })
     </script>
-    <script>
-        let imgSrcArr = ['img/profile.png', 'img/fav.png', 'img/cart.png', 'img/search.png'];
-        let imgSrcArr2 = ['img/hdi1.png', 'img/hdi2.png', 'img/hdi3.png', 'img/hdi4.png'];
-        window.addEventListener('scroll', () => {
-            let wholeHeader = document.querySelector('.wholeHeader');
-            let headerImgJs = document.getElementById('headerImgJs');
-            let scrollTop = document.getElementById('scrollTop');
-            let position = window.scrollY > 0;
-            wholeHeader.classList.toggle('custHeadClass', position);
-            position ? headerImgJs.src = 'img/logo.png' : headerImgJs.src = 'img/logo (1).png';
 
-            let images = document.querySelectorAll('.perHdImg');
-            if (position) {
-                images.forEach((e, i) => {
-                    e.src = imgSrcArr[i];
-                })
-            }
-            if (!position) {
-                images.forEach((e, i) => {
-                    e.src = imgSrcArr2[i];
-                })
-            }
-
-            let scroll = document.documentElement.scrollTop;
-            scrollTop.classList.toggle('active', scroll >= 200);
-        })
-    </script>
 </body>
 
 </html>
