--- a/wishlist.html
+++ b/wishlist.html
@@ -38,8 +38,16 @@
                         <img src="img/profile.png" class="perHdImg" id="loginJs">
                         <div class="logSign">
                             <ul>
-                                <li>Sign up</li>
-                                <li class="mt-1">Sign in</li>
+                                <li>
+                                    <a href="#">
+                                        Sign up
+                                    </a>
+                                </li>
+                                <li class="mt-1">
+                                    <a href="#">
+                                        Sign in
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
