added 2 more pages

--- a/ring.html
+++ b/ring.html
@@ -42,6 +42,7 @@
                     <div class="headerLogo">
                         <a href="./index.html">
                             <img src="img/logo-2.png" id="headerImgJs" class="img-fluid">
+                            <img src="img/logo.png" id="headerImg2Js" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -51,12 +52,12 @@
                         <div class="logSign">
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="./signup.html">
                                         Sign up
                                     </a>
                                 </li>
                                 <li class="mt-1">
-                                    <a href="#">
+                                    <a href="./signin.html">
                                         Sign in
                                     </a>
                                 </li>
@@ -69,7 +70,9 @@
                         </a>
                     </div>
                     <div class="perIcon">
-                        <img src="img/cart.png" class="perHdImg">
+                        <a href="./cart.html">
+                            <img src="img/cart.png" class="perHdImg">
+                        </a>
                     </div>
                     <div class="perIcon">
                         <img src="img/search.png" class="perHdImg">
@@ -112,6 +115,11 @@
         </div>
     </div>
 
+
+    <div class="ring-banner">
+        <img src="img/ring/slide.png" class="img-fluid">
+    </div>
+
     <div class="ring-upper-txt text-center mt-5">
         <p class="sliderAlFnt">Ring</p>
         <div class="container">
@@ -121,12 +129,12 @@
         </div>
     </div>
 
-    <div class="ring-banner">
+    <!-- <div class="ring-banner">
         <img src="img/ring/slide.png" class="img-fluid">
-    </div>
+    </div> -->
 
 
-    <div class="sortingAll mt-5">
+    <!-- <div class="sortingAll mt-5">
         <div class="container">
             <div class="sorting-content">
                 <div class="right-Sorting">
@@ -177,12 +185,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <section class="ring-product mt-3 mb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-1.png" class="img-fluid">
                     </div>
@@ -199,7 +207,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-2.png" class="img-fluid">
                     </div>
@@ -216,7 +224,58 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-3.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-3.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-3.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-3.png" class="img-fluid">
                     </div>
@@ -237,7 +296,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-12">
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12 perProduct-Ring">
+                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-4.png" class="img-fluid">
                                     </div>
@@ -254,7 +313,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 perProduct-Ring">
+                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-5.png" class="img-fluid">
                                     </div>
@@ -292,7 +351,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-6.png" class="img-fluid">
                     </div>
@@ -309,7 +368,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-7.png" class="img-fluid">
                     </div>
@@ -326,7 +385,58 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-8.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-8.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-8.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-8.png" class="img-fluid">
                     </div>
@@ -364,7 +474,7 @@
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-12">
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12 perProduct-Ring">
+                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-4.png" class="img-fluid">
                                     </div>
@@ -381,7 +491,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 perProduct-Ring">
+                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-5.png" class="img-fluid">
                                     </div>
@@ -402,7 +512,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-1.png" class="img-fluid">
                     </div>
@@ -419,7 +529,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-2.png" class="img-fluid">
                     </div>
@@ -436,7 +546,58 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 perProduct-Ring">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-3.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-3.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-3.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 perProduct-Ring">
                     <div class="ring-per-imags">
                         <img src="img/ring/product-3.png" class="img-fluid">
                     </div>
@@ -610,13 +771,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
-        window.addEventListener('scroll', () => {
+          window.addEventListener('scroll', () => {
             let wholeHeader = document.querySelector('.wholeHeader');
             let headerImgJs = document.getElementById('headerImgJs');
+            let headerImg2Js = document.getElementById('headerImg2Js');
             let scrollTop = document.getElementById('scrollTop');
             let position = window.scrollY > 0;
             wholeHeader.classList.toggle('custHeadClass', position);
-            position ? headerImgJs.src = 'img/logo.png' : headerImgJs.src = 'img/logo-2.png';
+           
+            !position ? headerImgJs.style.display = 'block' : headerImgJs.style.display = 'none';
+            position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
 
             let scroll = document.documentElement.scrollTop;
             scrollTop.classList.toggle('active', scroll >= 200);
