--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag Jewellers</title>
+    <title>Chirag - Cart</title>
 
     <!-- fontawsome  -->
     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
@@ -17,21 +17,12 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <!-- owlcursol  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <!-- custom  -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="wholeHeader" id="wholeHeader">
+    <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
         <div class="upperHeader">
             <div class="upperHdCont">
                 <div class="hambBar">
@@ -40,14 +31,14 @@
                 <div class="chiragLogo">
                     <div class="headerLogo">
                         <a href="./index.html">
-                            <img src="img/logo (1).png" id="headerImgJs" class="img-fluid">
+                            <img src="img/logo-2.png" id="headerImgJs" class="img-fluid">
                             <img src="img/logo.png" id="headerImg2Js" class="img-fluid">
                         </a>
                     </div>
                 </div>
                 <div class="headerIcon">
                     <div class="perIcon loginIconHd">
-                        <img src="img/hdi1.png" class="perHdImg" id="loginJs">
+                        <img src="img/profile.png" class="perHdImg" id="loginJs">
                         <div class="logSign">
                             <ul>
                                 <li>
@@ -65,22 +56,22 @@
                     </div>
                     <div class="perIcon">
                         <a href="./wishlist.html">
-                            <img src="img/hdi2.png" class="perHdImg">
+                            <img src="img/fav.png" class="perHdImg">
                         </a>
                     </div>
                     <div class="perIcon">
                         <a href="./cart.html">
-                            <img src="img/hdi3.png" class="perHdImg">
+                            <img src="img/cart.png" class="perHdImg">
                         </a>
                     </div>
                     <div class="perIcon">
-                        <img src="img/hdi4.png" class="perHdImg">
+                        <img src="img/search.png" class="perHdImg">
                     </div>
                 </div>
             </div>
         </div>
         <div class="downHeader" id="downHeader">
-            <div class="doenHdCont">
+            <div class="doenHdCont notHomeDoen">
                 <ul class="navbar-nav customNavCss me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -114,151 +105,76 @@
         </div>
     </div>
 
-    <!-- banner  -->
-    <div class="wholeban">
-        <div class="bannerCar">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1">
-                    <img src="img/unselect-dimond-1.png" data-bs-target="#carouselExampleIndicators"
-                        data-bs-slide-to="1" aria-label="Slide 2">
-                    <img src="img/select-dimond.png" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3">
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/hero-01.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/hero-01.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/hero-01.jpg" class="d-block w-100">
-                    </div>
-                </div>
+    <div class="container mt-4 mb-4">
+        <div class="all-Img-Btn text-center">
+            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+            <div class="allimgBtnbox">
+                <p class="wishlistHead">Cart</p>
             </div>
+            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
         </div>
     </div>
 
-
-    <div class="container categoriesBox mt-5">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="perBoxCatg perbox1">
-                    <div class="cateImg">
-                        <img src="img/earrings.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="perBoxCatg">
-                    <div class="cateImg">
-                        <img src="img/ring.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="perBoxCatg">
-                    <div class="cateImg">
-                        <img src="img/dimonds.png" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="perBoxcatg textCatBox">
-                    <h2 class="catgText text-end">Be the heart of</h2>
-                    <p class="adeilTxtcatg text-end">Brilliance</p>
-                    <p class="normalCatTxt text-end">At Chirag Jewellers, we don’t just craft exquisite jewellery; we
-                        make memories for a lifetime. Timeless and extravagant – each masterpiece is crafted to reflect
-                        legacy. Embrace the uniqueness of tradition and the evolving trends of modernity as you uphold
-                        our exclusive range and astound the world.</p>
-                </div>
-                <div class="perBoxcatg">
-                    <div class="cateImg">
-                        <img src="img/Bracelet.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="perBoxcatg">
-                    <div class="cateImg">
-                        <img src="img/nacklace.png" class="img-fluid">
-                        <p class="discoverBtn">
-                            <a href="#">
-                                DISCOVER
-                            </a>
-                        </p>
-                    </div>
-                </div>
-            </div>
+    <div class="container cartWishEmpty text-center mb-5">
+        <div class="mb-4">
+            <p class="m-0 txtFadedAll">Your cart feels lonely.</p>
+            <p class="m-0 txtFadedAll">Fill it up with your choice of brilliance</p>
         </div>
+        <button class="btns">Discover now</button>
     </div>
 
-    <div class="iframeCont">
-        <iframe
-            src="https://www.youtube.com/embed/ENQmpVZswys?autoplay=0&controls=0&disablekb=1&playsinline=1&cc_load_policy=0&widget_referrer=https%3A%2F%2Fwww.chiragjewellers.com%2Fonlinestore%2F&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1&customControls=true&noCookie=false&enablejsapi=1&origin=https%3A%2F%2Fwww.chiragjewellers.com&widgetid=1"
-            frameborder="0" width="100%" height="360"></iframe>
-    </div>
+    <section class="container mb-5">
+        <div class="tableBoxCart">
+            <div class="cartContent">
+                <table class="mb-2">
+                    <tr class="upperTrCartTable">
+                        <td class="productTableCart">Product</td>
+                        <td class="QPT">Quantity</td>
+                        <td class="QPT">Price</td>
+                        <td class="QPT">Total</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr class="DownCartTable">
+                        <td class="productTableCart">
+                            <div class="cartProdCont">
+                                <div class="cartProdImg">
+                                    <img src="img/ring/product-1.png" class="img-fluid">
+                                </div>
+                                <div class="wishProd-Details wishProdMargin">
+                                    <p class="wishProd-1de m-0">Diamond ring (R-445)</p>
+                                    <p class="wishProd-2de">size: 48 </p>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="QPT text-center">
+                            <div class="countCart">
+                                <div class="lftIndicators">
+                                    <div class="cartPlus"><i class="fas fa-sort-up"></i></div>
+                                    <div class="cartMinus text-center"><i class="fas fa-sort-down"></i></div>
+                                </div>
+                                <div class="cart-count-box text-center">
+                                   <span class="CartCountspan">1</span>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="QPT text-center txtFadedAll">Rs. 204,000.00</td>
+                        <td class="QPT text-center txtFadedAll">Rs. 204,000.00</td>
+                    </tr>
+                </table>
 
-
-    <!-- productSlider -->
-    <section class="producySlider mt-5 mb-5">
-        <div class="sliderHead text-center mb-5 mt-5">
-            <h2 class="allHeading">
-                <span class="sliderAlFnt">Trending</span>
-                Collection
-            </h2>
-        </div>
-        <div class="container">
-            <div class="sliderContent">
-                <div class="owl-carousel owl-theme s-content">
-                    <div class="item">
-                        <a href="./product.html">
-                            <div class="prodImg">
-                                <img src="img/ARPEGGIA.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item">
-                        <a href="./product.html">
-                            <div class="prodImg">
-                                <img src="img/ARPEGGIA2.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item">
-                        <a href="./product.html">
-                            <div class="prodImg">
-                                <img src="img/ARPEGGIA3.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item">
-                        <a href="./product.html">
-                            <div class="prodImg">
-                                <img src="img/ARPEGGIA4.png" alt="">
-                                <p class="prodName text-center">ARPEGGIA 18Ab560</p>
-                            </div>
-                        </a>
+                <div class="cartDownBtn mt-2">
+                    <div class="orderSum txtFadedAll">Order summery</div>
+                    <div class="cartCheckoutBtn">
+                        <button class="btns">
+                            <a href="./checkout.html">
+                                Procced to checkout
+                            </a>
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="custom-btns-prev-slider sliderLRArr"><img src="img/left-arrow.png" alt=""></div>
-        <div class="custom-btns-next-slider sliderLRArr"><img src="img/right-arrow.png" alt=""></div>
     </section>
 
     <div class="footer">
@@ -357,43 +273,7 @@
         <img src="img/top-1.png">
     </div>
     <script src="logic.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        var owl = $('.owl-carousel');
-        owl.owlCarousel({
-            loop: true,
-            margin: 10,
-            nav: false,
-            dots: false,
-            autoplay: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 1
-                },
-                1000: {
-                    items: 4
-                }
-            }
-        })
-        $('.custom-btns-next-slider').click(function () {
-            owl.trigger('next.owl.carousel');
-        })
-        $('.custom-btns-prev-slider').click(function () {
-            owl.trigger('prev.owl.carousel', [300]);
-        })
-    </script>
-    <script>
-        let imgSrcArr = ['img/profile.png', 'img/fav.png', 'img/cart.png', 'img/search.png'];
-        let imgSrcArr2 = ['img/hdi1.png', 'img/hdi2.png', 'img/hdi3.png', 'img/hdi4.png'];
         window.addEventListener('scroll', () => {
             let wholeHeader = document.querySelector('.wholeHeader');
             let headerImgJs = document.getElementById('headerImgJs');
@@ -401,23 +281,30 @@
             let scrollTop = document.getElementById('scrollTop');
             let position = window.scrollY > 0;
             wholeHeader.classList.toggle('custHeadClass', position);
+
             !position ? headerImgJs.style.display = 'block' : headerImgJs.style.display = 'none';
             position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
-            let images = document.querySelectorAll('.perHdImg');
-            if (position) {
-                images.forEach((e, i) => {
-                    e.src = imgSrcArr[i];
-                })
-            }
-            if (!position) {
-                images.forEach((e, i) => {
-                    e.src = imgSrcArr2[i];
-                })
-            }
 
             let scroll = document.documentElement.scrollTop;
             scrollTop.classList.toggle('active', scroll >= 200);
-        })
+        });
+
+        let cartPlus = document.querySelector('.cartPlus'),
+         cartMinus = document.querySelector('.cartMinus'),
+         CartCountspan = document.querySelector('.CartCountspan');
+         cartPlus.addEventListener('click', ()=>{
+            let val = parseInt(CartCountspan.innerText);
+            let newval = val + 1;
+            CartCountspan.innerText = newval;
+         });
+         cartMinus.addEventListener('click', ()=>{
+            let val = parseInt(CartCountspan.innerText);
+            let newval = val - 1;
+            if(newval < 0){
+                newval = 0;
+            }
+            CartCountspan.innerText = newval;
+         });
     </script>
 </body>
 
