--- a/checkout.html
+++ b/checkout.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Wishlist</title>
+    <title>Chirag - Checkout</title>
 
      <!-- fontawsome  -->
      <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
 
-    <!-- bootstrap  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <!-- custom  -->
-    <link rel="stylesheet" href="style.css">
+     <!-- bootstrap  -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+         crossorigin="anonymous"></script>
+ 
+     <!-- custom  -->
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
@@ -103,93 +103,58 @@
         </div>
     </div>
 
-
-    <div class="container mt-4 mb-5">
+    <div class="container mt-4 mb-3">
         <div class="all-Img-Btn text-center">
             <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
             <div class="allimgBtnbox">
-                <p class="wishlistHead">Wishlist</p>
+                <p class="wishlistHead">Checkout</p>
             </div>
             <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
         </div>
     </div>
 
-    <div class="productwishlist mb-5">
-        <div class="container">
-            <div class="wishlistPerPod mb-3">
-                <div class="wishProdDelete">
-                    <span class="wishProdCross">X</span>
-                </div>
-                <div class="row">
-                    <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-4 col-sm-12">
-                                <div class="wishProd-Img">
-                                    <img src="img/ring/product-1.png" class="img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-lg-9 col-md-8 col-sm-12 wishProdMargin">
-                                <div class="wishProd-Details">
-                                    <p class="wishProd-1de m-0">Diamond ring (R-445)</p>
-                                    <p class="wishProd-2de">size: 48 </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-3 col-sm-12 wishProdBtn" style="margin:auto;">
-                        <button class="btns">Add to cart</button>
-                    </div>
-                </div>
+    <div class="container text-center mb-5">
+        <p class="m-0 txtFadedAll">Returning customer?</p>
+        <button class="btns">
+            <a href="./signin.html">Click here to sign in</a>
+        </button>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="TextInptSUpIn mb-2">
+                    <input type="checkbox"> <span class="CheckboxMsg">Billing adress</span>
+                 </div>
+                <div class="TextInptSUpIn mb-5">
+                    <input type="checkbox"> <span class="CheckboxMsg">Shipping adress</span>
+                 </div>
+                 <div class="FLnmame">
+                     <div class="row">
+                         <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="checkOutBoxes mb-3">
+                                <p class="mb-1 txtFadedAll">First name:</p>
+                                <input type="text" class="CheckoutInputTxt checkoutsmlBoxes">
+                             </div>
+                         </div>
+                         <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="checkOutBoxes mb-3">
+                                <p class="mb-1 txtFadedAll">Last name:</p>
+                                <input type="text" class="CheckoutInputTxt checkoutsmlBoxes">
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+                 <div class="checkOutBoxes mb-3">
+                    <p class="mb-1 txtFadedAll">Company name: (optional)</p>
+                    <input type="text" class="CheckoutInputTxt checkoutLargrBoxes">
+                 </div>
             </div>
-            <div class="wishlistPerPod mb-3">
-                <div class="wishProdDelete">
-                    <span class="wishProdCross">X</span>
-                </div>
-                <div class="row">
-                    <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-4 col-sm-12">
-                                <div class="wishProd-Img">
-                                    <img src="img/ring/product-1.png" class="img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-lg-9 col-md-8 col-sm-12 wishProdMargin">
-                                <div class="wishProd-Details">
-                                    <p class="wishProd-1de m-0">Diamond ring (R-445)</p>
-                                    <p class="wishProd-2de">size: 48 </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-3 col-sm-12 wishProdBtn" style="margin:auto;">
-                        <button class="btns">Add to cart</button>
-                    </div>
-                </div>
-            </div>
-            <div class="wishlistPerPod">
-                <div class="wishProdDelete">
-                    <span class="wishProdCross">X</span>
-                </div>
-                <div class="row">
-                    <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-4 col-sm-12">
-                                <div class="wishProd-Img">
-                                    <img src="img/ring/product-1.png" class="img-fluid">
-                                </div>
-                            </div>
-                            <div class="col-lg-9 col-md-8 col-sm-12 wishProdMargin">
-                                <div class="wishProd-Details">
-                                    <p class="wishProd-1de m-0">Diamond ring (R-445)</p>
-                                    <p class="wishProd-2de">size: 48 </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-3 col-sm-12 wishProdBtn" style="margin:auto;">
-                        <button class="btns">Add to cart</button>
-                    </div>
-                </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="TextInptSUpIn mb-5">
+                    <input type="checkbox"> <span class="CheckboxMsg">Ship to a different adress</span>
+                 </div>
             </div>
         </div>
     </div>
@@ -285,38 +250,25 @@
             </div>
         </div>
     </div>
-
     <div class="scrollTop" id="scrollTop" onclick="toTop()">
         <img src="img/top-1.png">
     </div>
     <script src="logic.js"></script>
-
     <script>
-         window.addEventListener('scroll', () => {
+        window.addEventListener('scroll', () => {
             let wholeHeader = document.querySelector('.wholeHeader');
             let headerImgJs = document.getElementById('headerImgJs');
             let headerImg2Js = document.getElementById('headerImg2Js');
             let scrollTop = document.getElementById('scrollTop');
             let position = window.scrollY > 0;
             wholeHeader.classList.toggle('custHeadClass', position);
-           
+
             !position ? headerImgJs.style.display = 'block' : headerImgJs.style.display = 'none';
             position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
 
             let scroll = document.documentElement.scrollTop;
             scrollTop.classList.toggle('active', scroll >= 200);
         });
-
-      let wishlistPerPod = document.querySelectorAll('.wishlistPerPod');
-      wishlistPerPod.forEach((e,i)=>{
-          let deleteBtn = e.querySelector('.wishProdDelete');
-          deleteBtn.addEventListener('click', ()=>{
-            e.remove();
-            
-          });
-      })
     </script>
-
-
 </body>
 </html>
