--- a/signin.html
+++ b/signin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Product</title>
+    <title>Chirag - Sign in</title>
 
     <!-- fontawsome  -->
     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
@@ -16,15 +16,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-
-    <!-- owlcursol  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- custom  -->
     <link rel="stylesheet" href="style.css">
@@ -114,128 +105,63 @@
         </div>
     </div>
 
-    <section class="productDetails mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12">
-                    <div class="prodDetUImg">
-                        <img src="img/ring/product-1.png" class="img-fluid" id="Product-Imge-Main">
-                    </div>
-                    <div class="other-product-of-prodDet pt-2">
-                        <div class="prod-det-other" id="0" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-1.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="1" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-2.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="2" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-3.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="3" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-4.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="4" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-2.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="5" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-3.png" class="img-fluid">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
-                    <p class="prodDetLargetxt txtFadedAll mb-0 mt-5">
-                        Diamond ring (R-445)
-                    </p>
-                    <div class="smlTxtprodDet txtFadedAll mb-3">Rs. 204,000.00</div>
-                    <p class="txtFadedAll pt-2">The price mentioned is exclusive of 3% goods and services tax. <br>
-                        Description : Diamond Colour – EF | Diamond Clarity – VVS
-                    </p>
-                    <div class="prodDetSize mt-4 txtFadedAll">
-                        <p class="m-0">Size</p>
-                        <div class="sizeBoxProd mt-4">
-                            <span class="ProdSizeBtn">45</span>
-                            <span class="ProdSizeBtn">46</span>
-                            <span class="ProdSizeBtn">47</span>
-                            <span class="ProdSizeBtn">48</span>
-                            <span class="ProdSizeBtn">49</span>
-                            <span class="ProdSizeBtn">50</span>
-                            <span class="ProdSizeBtn">51</span>
-                            <br>
-                            <span class="ProdSizeBtn">52</span>
-                            <span class="ProdSizeBtn">53</span>
-                            <span class="ProdSizeBtn">54</span>
-                            <span class="ProdSizeBtn">55</span>
-                        </div>
-                        <div class="prodDetQty mt-2">
-                            <div class="qtyTxt">
-                                Qty: 
-                            </div>
-                            <div class="QtyChange-box">
-                                <span id="ProdDetQtyNum">1</span>
-                                <span class="QtyLogoProdDet"><i class="fas fa-sort-down"></i></span>
-                            </div>
-                        </div>
-                        <div class="prodDetaiButton mt-4">
-                            <div class="PerProdDet-button">
-                                <button class="btns">Wishlist</button>
-                            </div>
-                            <div class="PerProdDet-button">
-                                <button class="btns">Add to cart</button>
-                            </div>
-                            <div class="PerProdDet-button">
-                                <button class="btns">Buy now</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="container mt-5 mb-5">
+        <div class="all-Img-Btn text-center">
+            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+            <div class="allimgBtnbox">
+                <p class="wishlistHead">Sign in</p>
             </div>
+            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
         </div>
-    </section>
+    </div>
 
-    <section class="producySlider mt-5 mb-5">
-        <div class="sliderHead text-center mb-5 mt-5">
-            <h2 class="allHeading">
-                <span class="sliderAlFnt">Trending</span>
-                Ring
-            </h2>
-        </div>
-        <div class="container">
-            <div class="sliderContent">
-                <div class="owl-carousel owl-theme s-content">
-                    <div class="item">
-                        <a href="#">
-                            <div class="prodImg">
-                                <img src="img/ring/product-1.png" alt="">
-                            </div>
-                        </a>
+    <div class="container mb-5">
+        <div class="signUpIn">
+            <div class="signUpInContent">
+                <form>
+                    <div class="perSignUpIn mb-3">
+                        <div class="perSUpInTxt">
+                            Email / Mobile:
+                        </div>
+                        <div class="perInputSUpIn">
+                            <input type="text">
+                        </div>
                     </div>
-                    <div class="item">
-                        <a href="#">
-                            <div class="prodImg">
-                                <img src="img/ring/product-2.png" alt="">
-                            </div>
-                        </a>
+                    <div class="perSignUpIn mb-3">
+                        <div class="perSUpInTxt">
+                            Password:
+                        </div>
+                        <div class="perInputSUpIn">
+                            <input type="text">
+                        </div>
                     </div>
-                    <div class="item">
-                        <a href="#">
-                            <div class="prodImg">
-                                <img src="img/ring/product-3.png" alt="">
-                            </div>
-                        </a>
+                    <div class="sinUpBtn text-end">
+                        <button class="btns" type="submit" disabled="true">Sign in</button>
                     </div>
-                    <div class="item">
-                        <a href="#">
-                            <div class="prodImg">
-                                <img src="img/ring/product-4.png" alt="">
-                            </div>
-                        </a>
+                </form>
+
+                <div class="alternateSignBox mt-5 text-center">
+                    <div class="altSigncontent">
+                        <span>
+                            <span class="txtFadedAll">
+                                New User 
+                            </span>
+                            <span class="signUpIn-sIn">
+                                <a href="./signup.html">
+                                    Sign up
+                                </a>
+                            </span>
+                            <span class="forgetPW">
+                                <a href="#">
+                                    Forgot Password?
+                                </a>
+                            </span>
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="custom-btns-prev-slider sliderLRArr"><img src="img/left-arrow.png" alt=""></div>
-        <div class="custom-btns-next-slider sliderLRArr"><img src="img/right-arrow.png" alt=""></div>
-    </section>
+    </div>
 
     <div class="footer">
         <div class="footerCont pt-5 pb-5 container">
@@ -333,13 +259,6 @@
         <img src="img/top-1.png">
     </div>
     <script src="logic.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         window.addEventListener('scroll', () => {
             let wholeHeader = document.querySelector('.wholeHeader');
@@ -348,65 +267,14 @@
             let scrollTop = document.getElementById('scrollTop');
             let position = window.scrollY > 0;
             wholeHeader.classList.toggle('custHeadClass', position);
-           
+
             !position ? headerImgJs.style.display = 'block' : headerImgJs.style.display = 'none';
             position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
 
             let scroll = document.documentElement.scrollTop;
             scrollTop.classList.toggle('active', scroll >= 200);
         });
-
-        let ProdImgId = document.getElementById('Product-Imge-Main');
-        let imgArr = ['img/ring/product-1.png', 'img/ring/product-2.png', 'img/ring/product-3.png', 'img/ring/product-4.png', 'img/ring/product-2.png', 'img/ring/product-3.png'];
-        function ProdDetailImgChange(id){
-            imgArr.forEach((e,i)=>{
-                if(id == i){
-                    ProdImgId.src = e;
-                }
-            });
-        }
-
-        let ProdSizeBtn = document.querySelectorAll('.ProdSizeBtn');
-        ProdSizeBtn.forEach((elem)=>{
-            elem.addEventListener('click', ()=>{
-                ProdSizeBtn.forEach((elem2)=>{
-                    if(elem != elem2){
-                        elem2.classList.remove('active');
-                    }
-                })
-                elem.classList.add('active');
-            })
-        });
     </script>
-
-    <script>
-        var owl = $('.owl-carousel');
-        owl.owlCarousel({
-            loop: true,
-            margin: 10,
-            nav: false,
-            dots: false,
-            autoplay: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 1
-                },
-                1000: {
-                    items: 4
-                }
-            }
-        })
-        $('.custom-btns-next-slider').click(function () {
-            owl.trigger('next.owl.carousel');
-        })
-        $('.custom-btns-prev-slider').click(function () {
-            owl.trigger('prev.owl.carousel', [300]);
-        })
-    </script>
-
 </body>
 
 </html>
